Completed the problem PS2

--- a/problem-sets/PS2/PS2_Solution.ipynb
+++ b/problem-sets/PS2/PS2_Solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 239,
    "id": "5737650f-8e74-40fa-a8ff-fab90bad63e9",
    "metadata": {},
    "outputs": [
@@ -21,6 +21,8 @@
     "\n",
     "from src.p01_lr import logistic_regression, log_loss_signed\n",
     "import src.p05_percept as p05_percept\n",
+    "import src.p06_spam as p06_spam\n",
+    "import src.svm as svm\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -180,7 +182,9 @@
   {
    "cell_type": "markdown",
    "id": "73b22247-ca77-4131-a435-4950148cd7df",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Problem 5"
    ]
@@ -281,6 +285,234 @@
     "predict_y = [p05_percept.predict(state, kernel, test_x[i, :]) for i in range(test_y.shape[0])]\n",
     "\n",
     "np.savetxt('output/p05_{}_predictions'.format(kernel_name), predict_y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bd44921-6a41-4344-a952-99523c297ad2",
+   "metadata": {},
+   "source": [
+    "## Problem 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "id": "106f3fe5-69e7-4314-9273-204bff846429",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_messages, train_labels = util.load_spam_dataset('data/ds6_train.tsv')\n",
+    "val_messages, val_labels = util.load_spam_dataset('data/ds6_val.tsv')\n",
+    "test_messages, test_labels = util.load_spam_dataset('data/ds6_test.tsv')\n",
+    "dictionary = p06_spam.create_dictionary(train_messages)\n",
+    "util.write_json('output/p06_dictionary', dictionary)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0793667a-3ea1-4913-bd0b-364852de5498",
+   "metadata": {},
+   "source": [
+    "### Transform text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "id": "55131551-430f-41b7-ad50-1e56f2b25a26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_matrix = p06_spam.transform_text(train_messages, dictionary)\n",
+    "val_matrix = p06_spam.transform_text(val_messages, dictionary)\n",
+    "test_matrix = p06_spam.transform_text(test_messages, dictionary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f09ffdee-7b58-4b63-a9aa-c8ba53937149",
+   "metadata": {},
+   "source": [
+    "### Train model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "id": "777449f9-83fe-4d7a-b4e9-16e46da98f17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "naive_bayes_model = p06_spam.fit_naive_bayes_model(train_matrix, train_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "id": "f95dc68a-c1e2-4486-93d4-fae3752200c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       ...,\n",
+       "       [0., 0., 1., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 232,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c5d0f3b-a880-414e-91ea-8be9beadd148",
+   "metadata": {},
+   "source": [
+    "### Test model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "id": "7c0207e7-b51f-4aa4-a7e0-f4b77bfcd6eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naive Bayes had an accuracy of 0.978494623655914 on the testing set\n"
+     ]
+    }
+   ],
+   "source": [
+    "naive_bayes_predictions = p06_spam.predict_from_naive_bayes_model(naive_bayes_model, test_matrix)\n",
+    "naive_bayes_accuracy = np.mean(naive_bayes_predictions == test_labels)\n",
+    "\n",
+    "print('Naive Bayes had an accuracy of {} on the testing set'.format(naive_bayes_accuracy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "id": "7b7a2fde-8994-4ab9-a87e-f28398ddaaa5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True SPAM but misidentified\n",
+      "Can U get 2 phone NOW? I wanna chat 2 set up meet Call me NOW on 09096102316 U can cum here 2moro Luv JANE xx Calls£1/minmoremobsEMSPOBox45PO139WA\n",
+      "\n",
+      "Sorry I missed your call let's talk when you have the time. I'm on 07090201529\n",
+      "\n",
+      "FreeMsg Hey there darling it's been 3 week's now and no word back! I'd like some fun you up for it still? Tb ok! XxX std chgs to send, £1.50 to rcv\n",
+      "\n",
+      "A link to your picture has been sent. You can also use http://alto18.co.uk/wave/wave.asp?o=44345\n",
+      "\n",
+      "Missed call alert. These numbers called but left no message. 07008009200\n",
+      "\n",
+      "Goal! Arsenal 4 (Henry, 7 v Liverpool 2 Henry scores with a simple shot from 6 yards from a pass by Bergkamp to give Arsenal a 2 goal margin after 78 mins.\n",
+      "\n",
+      "FROM 88066 LOST £12 HELP\n",
+      "\n",
+      "Not true SPAM but misidentified\n",
+      "Madam,regret disturbance.might receive a reference check from DLF Premarica.kindly be informed.Rgds,Rakhesh,Kerala.\n",
+      "\n",
+      "Have you laid your airtel line to rest?\n",
+      "\n",
+      "Fighting with the world is easy, u either win or lose bt fightng with some1 who is close to u is dificult if u lose - u lose if u win - u still lose.\n",
+      "\n",
+      "Funny fact Nobody teaches volcanoes 2 erupt, tsunamis 2 arise, hurricanes 2 sway aroundn no 1 teaches hw 2 choose a wife Natural disasters just happens\n",
+      "\n",
+      "Hi! You just spoke to MANEESHA V. We'd like to know if you were satisfied with the experience. Reply Toll Free with Yes or No.\n"
+     ]
+    }
+   ],
+   "source": [
+    "messages_FP = [msg for msg, true, pred in zip(test_messages, test_labels, naive_bayes_predictions) if pred == 1 and true == 0]\n",
+    "messages_FN = [msg for msg, true, pred in zip(test_messages, test_labels, naive_bayes_predictions) if pred == 0 and true == 1]\n",
+    "\n",
+    "print('True SPAM but misidentified')\n",
+    "print(*messages_FN, sep='\\n\\n')\n",
+    "print()\n",
+    "print('Not true SPAM but misidentified')\n",
+    "print(*messages_FP, sep='\\n\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35748006-5e2e-472e-bb11-48b9cd29b802",
+   "metadata": {},
+   "source": [
+    "### Top 5 SPAM words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "id": "7b8a1f3d-f0b1-4059-9d0f-ad820ff659c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The top 5 indicative words for Naive Bayes are:  ['claim', 'won', 'prize', 'tone', 'urgent!', 'awarded', 'entry', '£1000', 'guaranteed', '4*', '150ppm', '£100', '18', 'ringtone', 'weekly']\n"
+     ]
+    }
+   ],
+   "source": [
+    "top_5_words, llr = p06_spam.get_top_five_naive_bayes_words(naive_bayes_model, dictionary)\n",
+    "\n",
+    "print('The top 5 indicative words for Naive Bayes are: ', top_5_words)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59d17c76-5be4-49a0-a841-1bb89692a9ef",
+   "metadata": {},
+   "source": [
+    "### SVM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "id": "d97f669b-9550-40af-8b73-578d8d0e7c19",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The optimal SVM radius was 0.1\n",
+      "The SVM model had an accuracy of 0.9695340501792115 on the testing set\n"
+     ]
+    }
+   ],
+   "source": [
+    "optimal_radius = p06_spam.compute_best_svm_radius(train_matrix, train_labels, val_matrix, val_labels, [0.01, 0.1, 1, 10])\n",
+    "\n",
+    "print('The optimal SVM radius was {}'.format(optimal_radius))\n",
+    "\n",
+    "svm_predictions = svm.train_and_predict_svm(train_matrix, train_labels, test_matrix, optimal_radius)\n",
+    "\n",
+    "svm_accuracy = np.mean(svm_predictions == test_labels)\n",
+    "\n",
+    "print('The SVM model had an accuracy of {} on the testing set'.format(svm_accuracy, optimal_radius))"
    ]
   }
  ],
