--- a/problem-sets/PS1/PS1_Solutions.ipynb
+++ b/problem-sets/PS1/PS1_Solutions.ipynb
@@ -1695,7 +1695,9 @@
   {
    "cell_type": "markdown",
    "id": "f183ab29-b6af-44ed-9714-4fb65b417e29",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Problem 5 "
    ]
